# ZMS

./: .code-workspace  .dockerignore  .editorconfig  .gitattributes  .gitignore  AUTHORS  CHANGES  Dockerfile  IZMSActionListContributor.py  IZMSCatalogAdapter.py  IZMSCatalogConnector.py  IZMSConfigurationProvider.py  IZMSDaemon.py  IZMSFormatProvider.py  IZMSLocale.py  IZMSMetacmdProvider.py  IZMSMetamodelProvider.py  IZMSNotificationService.py  IZMSRepositoryManager.py  IZMSRepositoryProvider.py  IZMSSvnInterface.py  IZMSWorkflowProvider.py  Jenkinsfile  MANIFEST.in  README  README.rst  RELEASE.md  ZMS  ZMSCharformatManager.py  ZMSCustomCatalogAdapter.py  ZMSFormatProvider.py  ZMSFormatProviderAcquired.py  ZMSGlobals.py  ZMSItem.py  ZMSMetacmdProvider.py  ZMSMetacmdProviderAcquired.py  ZMSMetadictManager.py  ZMSMetamodelProvider.py  ZMSMetaobjManager.py  ZMSRepositoryManager.py  (+102 more)
.devcontainer/: devcontainer.json  docker-compose.yml
Extensions/: foo.py  urls_xml.py
Products/: __init__.py
ZMS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
doc/: epydoc.cmd  epydoc.conf
docker/: Data.fs  Readme.md  TODO.md  docker-compose.yml  dockerfile  readme.md  start.sh  zope.conf  zope.ini
docs/: a_getting_started.md  access-control-implementation.md  admin_intro_de.md  admin_intro_en.md  admin_solr_en.md  async_redis.md  b_for_editors.md  blob_access_control.md  c_for_site_administrators.md  d_for_developers.md  develop_api_exampels_en.md  develop_cache.md  develop_intro_en.md  e_appendices.md  edit_intro_de.md  edit_intro_en.md  index.md  index_de.md  index_en.md  llm_configuration.md  readme.md  versioning.md  zmsobjectset_cookbook.md  zmssqldb_3rdparty.md
etc/: zms.conf
import/: LgContentReport-1.0.0.metaobj.xml  LgContentReport-1.0.1.metaobj.xml  _language.xml  codeblock.metaobj.xml  com.zms.foundation-3.1.11.metaobj.xml  com.zms.foundation-3.1.4.metaobj.xml  com.zms.foundation-3.1.5.metaobj.xml  com.zms.foundation-3.1.6.metaobj.xml  com.zms.foundation-3.1.7.metaobj.xml  com.zms.foundation-3.1.8.metaobj.xml  com.zms.foundation-3.1.9.metaobj.xml  com.zms.foundation-3.2.0.metaobj.xml  com.zms.foundation-3.2.1.metaobj.xml  com.zms.foundation-3.2.2.metaobj.xml  com.zms.foundation-3.2.3.metaobj.xml  com.zms.foundation-3.2.4.metaobj.xml  com.zms.foundation-3.2.5.metaobj.xml  com.zms.foundation-3.2.6.metaobj.xml  com.zms.foundation-3.2.7.metaobj.xml  com.zms.foundation-3.3.0.metaobj.xml  com.zms.foundation-3.3.1.metaobj.xml  com.zms.foundation-3.3.10.metaobj.xml  com.zms.foundation-3.3.11.metaobj.xml  com.zms.foundation-3.3.12.metaobj.xml  com.zms.foundation-3.3.2.metaobj.xml  com.zms.foundation-3.3.4.metaobj.xml  com.zms.foundation-3.3.5.metaobj.xml  com.zms.foundation-3.3.6.metaobj.xml  com.zms.foundation-3.3.7.metaobj.xml  (+124 more)
src/: Products
(+3162 files in other folders)
